cleaned up most checkstyle and findbugs issues on the server code to prepare for hands on lab